<resources>
    <string name="app_name">UnitTesting</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="login">Login</string>
    <string name="shopping">Shopping</string>
    <string name="records_in_db">Records In DB</string>
    <string name="image">Image</string>
    <string name="name">NAME</string>
    <string name="price">Price: 3€</string>
</resources>